# deep-learning

./: .dockerignore  .gitignore  Dockerfile  check_gpu.ipynb  main.py  pyproject.docker.toml  pyproject.toml  tuning.txt
ANNs/: Binary_Anns.ipynb  regression_ANNs.ipynb
ANNs/Binary-Class-Hyper-Model/Model 1/: oracle.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_00/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_01/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_02/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_03/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_04/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_05/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_06/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_07/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_08/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_09/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ANNs/Binary-Class-Hyper-Model/Model 1/trial_10/: checkpoint.index  trial.json  (+1 more)
RNNs/: BiDirestional_Rnns.ipynb  Deep_Rnns.ipynb
datasets/: Housing.csv
(+12 files in other folders)
