[project]
name = "deep-learning"
version = "0.1.0"
description = "Deep learning template"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "fastapi>=0.135.3",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=1.23,<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    # ✅ Windows safe TensorFlow
    "tensorflow==2.10; sys_platform == 'win32'",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
